oxiplate-derive/tests/broken/extends/extends-after-statement.stderr
error: Unexpected 'extends' statement after content already present in template
 --> tests/broken/extends/extends-after-statement.rs:4:49
  |
4 | #[oxiplate_inline(r#"{% if true %}{% endif %}{% extends "multiple-blocks.html.oxip" %}"#)]
  |                                                 ^^^^^^^
