oxiplate-derive/tests/broken/extends/extends-after-statement.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate_inline(r#"{% if true %}{% endif %}{% extends "multiple-blocks.html.oxip" %}"#)]
struct Static;

fn main() {
    print!("{}", Static);
}
